# Anr4

./: .gitignore  .gitmodules  Cargo.toml  README
migrations/: 20250809091053_initial.sql
report/: bibliography.bib  code_listing.typ  dev-notes.md  implementation.typ  interview notes.md  main.typ  template.typ
report/analysis/: interview transcript.typ  main.typ  objectives.typ
report/design/: api.typ  authentication.typ  database.typ  db_fletcher.typ  effective_learning.typ  flowcharts.typ  main.typ  overview.typ  spelling_algorithm.typ
report/design/client/: api.typ  auth.typ  components.typ  main.typ  primitives.typ  widgets.typ  wireframes.typ
report/design/server/: docsgen.typ  main.typ  rust_item_renderer.typ
report/evaluation/: main.typ
report/testing/: acceptance_testing.typ  main.typ  test_template.typ
report/testing/media/video/: NEA.mlt
src/: api.rs  auth.rs  database.rs  https_server_boilerplate.rs  lib.rs  main.rs  server_state.rs
src/api/: queries.rs
src/auth/: access_token.rs
website/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
website/src/: index.tsx  loginPopupAuthFailureHandler.tsx  util.test.ts  util.ts
website/src/algorithms/: correctness.test.ts  correctness.tsx  learningModel.ts
website/src/api/: auth.ts  index.ts  types.ts  world.ts
website/src/components/: ALink.tsx  Leaderboard.tsx  Loading.tsx  LoginPrompt.tsx  MultilingualInput.tsx  Trajectory.tsx
website/src/styles/: index.scss  learn.scss  mixins.scss  student-home.scss
website/src/views/: DebugCorrectness.tsx  Home.tsx  Learn.tsx  Login.tsx  StudentHome.tsx  TeacherHome.tsx
